kub/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth
